--- a/admin.html
+++ b/admin.html
@@ -6,143 +6,100 @@
   <title>Cadenza Admin – Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     body { background: #F4EDE4; }
-    .sidebar-gradient { background: linear-gradient(135deg, #3C2A1E 0%, #754032 100%); }
-    .cadenza-gold { color: #D4AF37; }
     .gold-bg { background-color: #D4AF37; }
+    .login-overlay {
+      position: fixed; z-index: 9999; top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(60,42,30,0.97); display: flex; align-items: center; justify-content: center;
+    }
+    .fadeout { animation: fadeOut 0.6s forwards; }
+    @keyframes fadeOut { 100% { opacity: 0; visibility: hidden; } }
+    .modal-bg {
+      position: fixed; inset: 0; background: rgba(0,0,0,0.25); z-index: 9999;
+      display: flex; align-items: center; justify-content: center;
+    }
+    .hide-scrollbar::-webkit-scrollbar { display: none; }
+    .hide-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
 </head>
-<body class="flex min-h-screen font-sans">
+<body class="min-h-screen font-sans flex flex-col">
 
-  <!-- Sidebar -->
-  <aside class="sidebar-gradient w-64 flex flex-col px-4 py-8 text-[#F4EDE4] shadow-lg min-h-screen">
-    <div class="flex items-center mb-12 gap-2">
-      <i class="fa-solid fa-music cadenza-gold text-3xl"></i>
-      <span class="text-2xl font-bold cadenza-gold">Cadenza Admin</span>
+  <!-- Login Overlay -->
+  <div id="login-overlay" class="login-overlay">
+    <div class="bg-white rounded-xl shadow-2xl px-8 py-10 w-[95vw] max-w-sm text-center flex flex-col gap-6">
+      <div class="flex justify-center mb-2">
+        <i class="fa-solid fa-music text-3xl" style="color:#D4AF37"></i>
+      </div>
+      <h2 class="text-2xl font-bold text-[#3C2A1E] mb-1">Admin Login</h2>
+      <form id="login-form" class="flex flex-col gap-4">
+        <input type="email" id="admin-email" class="border rounded px-4 py-2" placeholder="Email" required autocomplete="username">
+        <input type="password" id="admin-password" class="border rounded px-4 py-2" placeholder="Password" required autocomplete="current-password">
+        <button type="submit" class="gold-bg text-black px-4 py-2 rounded font-semibold hover:bg-yellow-400 transition">Login</button>
+      </form>
+      <div class="mt-2">
+        <button id="dev-bypass" class="text-xs px-2 py-1 rounded bg-gray-100 text-[#754032] hover:bg-gray-200 transition">
+          Dev Bypass
+        </button>
+      </div>
+      <p class="text-xs text-gray-400">For demo only – authentication coming soon.</p>
     </div>
-    <nav class="flex flex-col gap-4 text-lg font-medium">
-      <a href="#" class="hover:text-[#D4AF37] flex items-center gap-3">
-        <i class="fa-solid fa-gauge"></i> Dashboard
-      </a>
-      <a href="#" class="hover:text-[#D4AF37] flex items-center gap-3">
-        <i class="fa-solid fa-calendar"></i> Calendar
-      </a>
-      <a href="#" class="hover:text-[#D4AF37] flex items-center gap-3">
-        <i class="fa-solid fa-users"></i> Users
-      </a>
-      <a href="#" class="hover:text-[#D4AF37] flex items-center gap-3">
-        <i class="fa-solid fa-chalkboard-teacher"></i> Teachers
-      </a>
-      <a href="#" class="hover:text-[#D4AF37] flex items-center gap-3 mt-10">
-        <i class="fa-solid fa-sign-out-alt"></i> Logout
-      </a>
-    </nav>
-  </aside>
+  </div>
+
+  <!-- View More Modal -->
+  <div id="view-modal" class="modal-bg hidden">
+    <div class="bg-white rounded-xl shadow-xl p-6 w-[92vw] max-w-md relative max-h-[95vh] overflow-y-auto">
+      <button id="close-modal" class="absolute top-3 right-3 text-gray-400 hover:text-gray-700 text-xl">
+        &times;
+      </button>
+      <h3 class="text-lg font-bold mb-4 text-[#3C2A1E]">Registration Details</h3>
+      <div id="modal-content" class="space-y-2 text-sm">
+        <!-- Filled dynamically -->
+      </div>
+    </div>
+  </div>
 
   <!-- Main content -->
-  <main class="flex-1 p-10 bg-[#F4EDE4]">
-    <header class="mb-8 flex flex-col md:flex-row md:items-center md:justify-between gap-4">
+  <main class="flex-1 flex flex-col items-center justify-start p-4 sm:p-8 bg-[#F4EDE4]">
+    <header class="mb-6 sm:mb-8 w-full max-w-4xl">
       <div>
-        <h1 class="text-3xl font-bold text-[#3C2A1E]">Welcome, Admin!</h1>
+        <h1 class="text-2xl sm:text-3xl font-bold text-[#3C2A1E]" id="admin-greeting">Welcome, Admin!</h1>
         <p class="text-lg text-[#754032]">Here’s what’s happening at Cadenza today.</p>
       </div>
-      <button class="gold-bg text-black px-5 py-2 rounded-md font-semibold shadow hover:bg-yellow-400 transition">
-        + Add Class
-      </button>
     </header>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-      <!-- Users Table -->
-      <section class="bg-white rounded-xl shadow-lg p-6">
-        <div class="flex items-center justify-between mb-4">
-          <h2 class="text-xl font-bold text-[#3C2A1E]">User Signups</h2>
-          <button class="px-3 py-1 bg-[#D4AF37] text-black rounded hover:bg-yellow-400">Export CSV</button>
+    <section class="w-full max-w-4xl bg-white rounded-xl shadow-lg p-2 sm:p-6 mb-8">
+      <div class="flex flex-col sm:flex-row items-center justify-between mb-4 gap-2">
+        <h2 class="text-lg sm:text-xl font-bold text-[#3C2A1E]">User Registrations</h2>
+        <button id="export-csv" class="px-3 py-1 bg-[#D4AF37] text-black rounded hover:bg-yellow-400 w-full sm:w-auto">Export CSV</button>
+      </div>
+      <div class="overflow-x-auto overflow-y-auto max-h-[60vh] w-full hide-scrollbar">
+        <table class="min-w-full divide-y divide-gray-200 text-xs sm:text-sm" id="registrations-table">
+          <thead class="sticky top-0 bg-white z-10">
+            <tr>
+              <th class="px-2 py-2 sm:px-3 text-left font-semibold text-gray-500 uppercase">Name</th>
+              <th class="px-2 py-2 sm:px-3 text-left font-semibold text-gray-500 uppercase">Age</th>
+              <th class="px-2 py-2 sm:px-3 text-left font-semibold text-gray-500 uppercase">Course</th>
+              <th class="px-2 py-2 sm:px-3 text-left font-semibold text-gray-500 uppercase">Date</th>
+              <th class="px-2 py-2 sm:px-3 text-left font-semibold text-gray-500 uppercase">Time</th>
+              <th class="px-2 py-2 sm:px-3"></th>
+            </tr>
+          </thead>
+          <tbody class="divide-y divide-gray-100" id="registrations-tbody">
+            <!-- Dynamic rows go here -->
+          </tbody>
+        </table>
+        <div id="registrations-empty" class="text-center text-gray-500 py-4 hidden">
+          No registrations yet.
         </div>
-        <div class="overflow-x-auto">
-          <table class="min-w-full divide-y divide-gray-200">
-            <thead>
-              <tr>
-                <th class="px-3 py-2 text-left text-xs font-semibold text-gray-500 uppercase">Name</th>
-                <th class="px-3 py-2 text-left text-xs font-semibold text-gray-500 uppercase">Course</th>
-                <th class="px-3 py-2 text-left text-xs font-semibold text-gray-500 uppercase">Class Time</th>
-                <th class="px-3 py-2 text-left text-xs font-semibold text-gray-500 uppercase">Status</th>
-                <th class="px-3 py-2"></th>
-              </tr>
-            </thead>
-            <tbody class="divide-y divide-gray-100">
-              <!-- Example rows -->
-              <tr>
-                <td class="px-3 py-2 font-medium text-[#3C2A1E]">Rahul Sharma</td>
-                <td class="px-3 py-2">Hindustani Vocals</td>
-                <td class="px-3 py-2">Aug 12, 7:30 PM IST</td>
-                <td class="px-3 py-2">
-                  <span class="inline-block px-2 py-1 bg-green-100 text-green-700 rounded text-xs font-bold">Confirmed</span>
-                </td>
-                <td class="px-3 py-2">
-                  <button class="text-blue-600 hover:underline">View</button>
-                </td>
-              </tr>
-              <tr>
-                <td class="px-3 py-2 font-medium text-[#3C2A1E]">Priya Patel</td>
-                <td class="px-3 py-2">Piano</td>
-                <td class="px-3 py-2">Aug 14, 6:00 PM IST</td>
-                <td class="px-3 py-2">
-                  <span class="inline-block px-2 py-1 bg-yellow-100 text-yellow-800 rounded text-xs font-bold">Pending</span>
-                </td>
-                <td class="px-3 py-2">
-                  <button class="text-blue-600 hover:underline">View</button>
-                </td>
-              </tr>
-              <!-- ...repeat rows as needed... -->
-            </tbody>
-          </table>
-        </div>
-      </section>
-
-      <!-- Calendar + Teacher Switch -->
-      <section class="bg-white rounded-xl shadow-lg p-6 flex flex-col">
-        <div class="flex items-center justify-between mb-4">
-          <h2 class="text-xl font-bold text-[#3C2A1E]">Class Calendar</h2>
-          <div class="flex items-center gap-2">
-            <span class="text-sm">Show:</span>
-            <button id="switch-view-btn" class="bg-[#D4AF37] text-black px-3 py-1 rounded font-semibold hover:bg-yellow-400 transition">
-              All Sessions
-            </button>
-            <button id="switch-teacher-btn" class="bg-gray-100 text-[#754032] px-3 py-1 rounded font-semibold hover:bg-gray-200 transition">
-              My Sessions
-            </button>
-          </div>
-        </div>
-        <div class="flex-1 flex flex-col justify-center items-center">
-          <!-- Placeholder Calendar -->
-          <div class="w-full max-w-lg h-80 bg-gray-50 rounded-lg border border-[#D4AF37]/40 flex flex-col items-center justify-center">
-            <span class="fa-solid fa-calendar-days text-5xl text-[#D4AF37] mb-4"></span>
-            <p class="text-[#754032] text-lg font-medium">Calendar goes here</p>
-            <button class="mt-4 px-4 py-2 bg-[#D4AF37] text-black rounded hover:bg-yellow-400 transition">
-              Schedule New Class
-            </button>
-          </div>
-          <!-- If sessions: list them here -->
-          <div class="w-full mt-6">
-            <h3 class="text-md font-bold text-[#3C2A1E] mb-2">Today's Sessions</h3>
-            <ul class="space-y-2">
-              <li class="flex items-center gap-3">
-                <span class="fa-solid fa-clock text-[#D4AF37]"></span>
-                <span>7:30 PM – Hindustani Vocals (Rahul Sharma)</span>
-                <span class="ml-auto text-green-600 text-xs">Confirmed</span>
-              </li>
-              <li class="flex items-center gap-3">
-                <span class="fa-solid fa-clock text-[#D4AF37]"></span>
-                <span>6:00 PM – Piano (Priya Patel)</span>
-                <span class="ml-auto text-yellow-700 text-xs">Pending</span>
-              </li>
-              <!-- ...repeat as needed... -->
-            </ul>
-          </div>
-        </div>
-      </section>
-    </div>
+      </div>
+    </section>
+    <button id="logout-btn" class="mt-auto gold-bg text-black px-5 py-2 rounded-md font-semibold shadow hover:bg-yellow-400 transition w-full max-w-xs">
+      Logout
+    </button>
   </main>
+
+  <script src="adminpanel.js"></script>
 </body>
 </html>
